<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.kenbo.chess_gui.MainActivity">


    <Button
        android:id="@+id/endTurn"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginBottom="56dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="200dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/submit_turn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/endGameButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="76dp"
        android:layout_marginTop="200dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/end_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/castleButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginBottom="56dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/colorButtonNormal"
        android:text="@string/castle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdownText"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/countdownText"
        android:layout_width="509dp"
        android:layout_height="87dp"
        android:layout_marginBottom="196dp"
        android:text="@string/test"
        android:textAlignment="center"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="50dp"
        android:layout_height="24dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="120dp"
        android:text="@string/status"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="420dp"
        android:layout_height="24dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/statusLabel" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="163dp"
        android:layout_height="22dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/capture"
        app:layout_constraintBottom_toTopOf="@+id/endTurn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdownText"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/logButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="Log"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
